--- a/src/add_course.html
+++ b/src/add_course.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="js/menu.js"></script>
+    <link rel="stylesheet" href="css/style.scss">
     <title>Lägg till kurs</title>
 </head>
 <body>
