klar med meny, ska börja med funktioner

--- a/src/add_course.html
+++ b/src/add_course.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,36 @@
     <link rel="stylesheet" href="css/style.scss">
     <title>Lägg till kurs</title>
 </head>
+
 <body>
-    
+    <header>
+        <a href="index.html" aria-label="Tillbaks till startsida"><img src="bilder/placeholder logo.svg"
+                alt="logotyp"></a>
+        <h1>Lägg till kurs</h1>
+        <nav id="pc_nav">
+            <ul>
+                <li><a href="index.html">Kurser</a></li>
+                <li><a href="about_site.html">Om sidan</a></li>
+                <li class="currentSite"><a href="add_course.html">Lägg till kurs</a></li>
+            </ul>
+        </nav>
+        <button type="button" aria-label="Öpnna navigeringsmeny" id="mobile_btn"><img src="bilder/bars-solid.svg"
+                alt="Navigeringsmeny"></button>
+        <div id="mobile_menu">
+            <nav id="mobile_nav">
+                <button type="button" aria-label="Stäng navigeringsmeny" id="mobile_btn_close"><img
+                        src="bilder/xmark-solid.svg" alt="Navigeringsmeny"></button>
+                <ul>
+                    <li><a href="index.html"><span>Kurser</span></a></li>
+                    <li><a href="about_site.html"><span>Om sidan</span></a></li>
+                    <li class="currentSite"><a href="add_course.html"><span>Lägg till kurs</span></a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <form action=""></form>
+    </main>
 </body>
+
 </html>
