--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,11 @@
             </nav>
         </div>
     </header>
+    <main>
+        <div id="courses">
+            
+        </div>
+    </main>
 </body>
 
 </html>
