--- a/src/about_site.html
+++ b/src/about_site.html
@@ -8,6 +8,33 @@
     <title>Om sidan</title>
 </head>
 <body>
-
+    <header>
+        <a href="index.html" aria-label="Tillbaks till startsida"><img src="bilder/placeholder logo.svg"
+                alt="logotyp"></a>
+        <h1>Om sidan</h1>
+        <nav id="pc_nav">
+            <ul>
+                <li><a href="index.html">Kurser</a></li>
+                <li class="currentSite"><a href="about_site.html">Om sidan</a></li>
+                <li><a href="add_course.html">Lägg till kurs</a></li>
+            </ul>
+        </nav>
+        <button type="button" aria-label="Öpnna navigeringsmeny" id="mobile_btn"><img src="bilder/bars-solid.svg"
+                alt="Navigeringsmeny"></button>
+        <div id="mobile_menu">
+            <nav id="mobile_nav">
+                <button type="button" aria-label="Stäng navigeringsmeny" id="mobile_btn_close"><img
+                        src="bilder/xmark-solid.svg" alt="Navigeringsmeny"></button>
+                <ul>
+                    <li><a href="index.html"><span>Kurser</span></a></li>
+                    <li class="currentSite"><a href="about_site.html"><span>Om sidan</span></a></li>
+                    <li><a href="add_course.html"><span>Lägg till kurs</span></a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        
+    </main>
 </body>
 </html>
